chore: use GraalVm community dev build (jdk 20) for native images.